--- a/templates/games/game.html
+++ b/templates/games/game.html
@@ -153,7 +153,7 @@
 </tr>
 {% endfor %}
 </table>
-<a href="./players.txt">Plain text</a>
+<a href="./players.txt">player list in plain text</a>
 
 {% if not game.has_ended %}
   {% if user.is_authenticated and hasjoined and game.open%}
@@ -203,7 +203,7 @@
     </tr></table>
   {% else %}
     {% if not game.open %}
-      signups for this game are closed.
+      | signups for this game are closed.
     {% else %}
       {% if user.is_authenticated %}
         <fieldset style="width: 420">
@@ -214,7 +214,7 @@
         </form>
         </fieldset>
       {% else %}
-        log in to sign up.
+        | log in to sign up.
       {% endif %}
     {% endif %}
   {% endif %}
