Remove the Category thing

--- a/templates/includes/leftpanel.html
+++ b/templates/includes/leftpanel.html
@@ -1,28 +1,6 @@
 {% load menu_tags %}
 <table>
-<tr>
-	<ul class="panel">
-		{% show_menu 0 2 10 10 "menu-toplevel-general.html" %}
-	</ul>
-</tr>
-<tr>
-	<h3>COMMUNITY</h3>
-	<ul class="panel">
-		{% show_menu 0 2 10 10 "menu-community.html" %}
-	</ul>
-</tr>
-<tr>
-	<h3>TECHNICAL</h3>
-	<ul class="panel">
-		{% show_menu 0 2 10 10 "menu-technical.html" %}
-	</ul>
-</tr>
-<tr>
-	<h3>EXTRAS</h3>
-	<ul class="panel">
-		{% show_menu 0 2 10 10 "menu-extras.html" %}
-	</ul>
-</tr>
+{% show_menu 0 2 10 10 "menu.html" %}
 <tr>
 	<h3>MY ACCOUNT</h3>
 	<ul class="panel">
